--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,18 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bull": "^4.16.4",
+    "bull": "^4.16.5",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
+    "fs": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.14.1",
     "razorpay": "^2.9.5",
     "redis": "^4.7.0",
     "uuid": "^10.0.0"
